--- a/resources/sass/admin/accounts/index.scss
+++ b/resources/sass/admin/accounts/index.scss
@@ -61,19 +61,49 @@
                     background-color: $hover_gray;
                 }
             }
+            .filter-cont{
+                // background-color: rgba(255, 255, 255, .7);
+                // border-radius: 20px;
+                .row>div{
+                    padding: 10px;
+                    background-color: rgba(255, 255, 255, .7);
+                    &:first-child{
+                        border-top-left-radius: 20px;
+                        border-top-right-radius: 20px;
+                        border-bottom-left-radius: 0px;
+                        border-bottom-right-radius: 0px;
+                    }
+                    &:last-child{
+                        border-top-left-radius: 0px;
+                        border-top-right-radius: 0px;
+                        border-bottom-left-radius: 20px;
+                        border-bottom-right-radius: 20px;
+                    }
+                }
+                .sub-filter-cont{
+                    // background-color: rgba(200, 200, 200, .7);
+                    // padding: 5px;
+                    // border-radius: 5px;
+                    border-bottom: 2px solid rgba(200, 200, 200, .7);
+                }
+                select{
+                    width: 100%;
+                    border: none;
+                    outline: none;
+                    border-radius: 5px;
+                    background-color: transparent;
+                    padding: 5px 0;
+                    font-size: 12px;
+                }
+                label{
+                    font-size: 12px;
+                }
+            }
             .search-style{
                 width: 100%;
                 background-color: white;
                 padding: 10px;
                 position: relative;
-                // &:first-child{
-                //     border-top-left-radius: 20px;
-                //     border-top-right-radius: 20px;
-                // }
-                // &:last-child{
-                //     border-bottom-left-radius: 20px;
-                //     border-bottom-right-radius: 20px;
-                // }
                 .placeholder-info{
                     position: absolute;
                     right: 0px;
@@ -87,22 +117,17 @@
                 }
                 select{
                     width: 100%;
-                    height: 50px;
                     border: none;
                     outline: none;
-                    border-radius: 5px;
+                    height: 30px;
                 }
                 input{
                     width: 100%;
-                    height: 50px;
+                    border-radius: 0px;
                     border: none;
                     border-bottom: solid 1px gray;
                     outline: none;
-                }
-                button{
-                    width: 100%;
-                    height: 50px;
-                    //border-radius: 20px;
+                    height: 30px;
                 }
                 .tag-search{
                     position: relative;
@@ -421,6 +446,22 @@
     @media (min-width: 992px){
         .search{
             .search-main{
+                .filter-cont{
+                    .row>div{
+                        &:first-child{
+                            border-top-left-radius: 20px;
+                            border-top-right-radius: 0px;
+                            border-bottom-left-radius: 20px;
+                            border-bottom-right-radius: 0px;
+                        }
+                        &:last-child{
+                            border-top-left-radius: 0px;
+                            border-top-right-radius: 20px;
+                            border-bottom-left-radius: 0px;
+                            border-bottom-right-radius: 20px;
+                        }
+                    }
+                }
                 .search-style{
                     // &:first-child{
                     //     border-top-left-radius: 20px;
