--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -114,8 +114,7 @@ ul>p{
 .sub-section{
     position: relative;
     border-bottom: 2px solid $hover_gray;
-    // padding: 20px 0;
-    padding: 30px 0;
+    padding: 20px 0;
 }
 
 .last-sub-section{
@@ -126,15 +125,13 @@ ul>p{
 .gray-cont{
     background-color: $light_gray;
     padding: 20px;
-    padding-top: 40px;
     border-radius: 10px;
     margin-bottom: 15px;
 }
 
 .scale{
-    transition: .2s;
     &:hover{
-        transform: scale(1.1);
+        transform: scale(1.01);
     }
 }
 
@@ -333,6 +330,18 @@ ul>p{
                 display: block;
             }
         }
+        .website{
+            color: $green_3;
+        }
+        .linkedin{
+            color: #3490dc;
+        }
+        .pitch,.curriculum_vitae{
+            color: orange;
+        }
+        .roadmap{
+            color: red;
+        }
     }
 }
 
@@ -342,7 +351,7 @@ select option {
 }
 
 select:invalid,
-select option[value=""] {
+select option[value=""]{
   color: #999999;
 }
 
@@ -353,8 +362,8 @@ select option[value=""] {
 .img-cont{
     display: inline-block;
     border-radius: 50%;
-    //background-color: $green_2;
-    // border: 2px solid $green_2;
+    background-color: $green_2;
+    border: 2px solid $green_2;
     position: relative;
     img{
         position: absolute;
@@ -367,8 +376,8 @@ select option[value=""] {
     }
 }
 .img-cont-blue{
-    //background-color: $blue_2 !important;
-    // border: 2px solid $blue_2 !important;
+    background-color: $blue_2 !important;
+    border: 2px solid $blue_2 !important;
 }
 .micro-img{
     width: 30px;
@@ -378,35 +387,17 @@ select option[value=""] {
     width: 50px;
     height: 50px;
 }
-.small-img{
-    width: 75px;
-    height: 75px;
-}
 .medium-img{
     width: 100px;
     height: 100px;
 }
 .big-img{
-    width: 140px;
-    height: 140px;
+    width: 150px;
+    height: 150px;
 }
 .max-img{
     width: 300px;
     height: 300px;
-}
-
-.r-90r{
-  transition: .2s;
-  transform: rotate(90deg);
-}
-
-.r-90l{
-  transition: .2s;
-  transform: rotate(-90deg);
-}
-
-.r-180{
-  transform: rotate(180deg);
 }
 
 .tag{
@@ -425,22 +416,6 @@ select option[value=""] {
 
 .mini-txt{
     font-size: 12px;
-}
-
-.bg-green-1{
-    background-color: $green_1;
-}
-
-.bg-green-2{
-    background-color: $green_2;
-}
-
-.bg-blue-1{
-    background-color: $blue_1;
-}
-
-.bg-blue-2{
-    background-color: $blue_2;
 }
 
 .txt-green{
@@ -584,48 +559,58 @@ select option[value=""] {
 
 .border-style{
     display: inline-block;
-    padding: 3px 20px 3px 20px;
+    padding: 2px 10px;
     border-radius: 10px;
     color: black;
     border: none;
     margin-right: 3px;
-    margin-bottom: 8px;
+    margin-bottom: 3px;
     i{
-      transition: .2s;
-      &:hover{
-          cursor: pointer;
-          transform: scale(1.2);
-      }
+        transition: .2s;
+        &:hover{
+            cursor: pointer;
+            transform: scale(1.2);
+        }
     }
+}
+
+.border-style-green{
+    padding: 10px;
+    border-radius: 20px;
+    border: 3px solid $green_3;
 }
 
 .bubble-cont{
     position: relative;
     .bubble{
-        position: absolute;
-        width: 400px;
-        left: calc(100% + 20px);
-        top: 40%;
-        z-index: 5;
         background-color: $blue_1;
+        border-radius: 0px 20px 20px 20px;
+        padding: 10px;
+        position: relative;
+        width: auto;
+        margin-top: 5px;
+        &::after{
+            content: "";
+            // background-color: black;
+            width: 10px;
+            height: 10px;
+            position: absolute;
+            left: -10px;
+            top: 0px;
+            border-style: solid;
+            border-width: 0 10px 10px 0;
+            border-color: transparent $blue_1 transparent transparent;
+        }
     }
 }
-.bubble{
-    background-color: $green_1;
-    border-radius: 0px 20px 20px 20px;
-    padding: 10px;
-    position: relative;
-    &::after {
-        content: "";
-        // background-color: black;
-        width: 10px;
-        height: 10px;
-        position: absolute;
-        left: -10px;
-        top: 0px;
-        border-style: solid;
-        border-width: 0 10px 10px 0;
-        border-color: transparent $green_1 transparent transparent;
+@media (min-width: 768px){
+    .bubble-cont{
+        .bubble{
+            width: 420px;
+            position: absolute;
+            left: calc(100% + 15px);
+            top: -20px;
+        }
     }
 }
 
@@ -926,6 +911,12 @@ select option[value=""] {
     top: 5px;
     right: 5px;
 }
+.edit-center-center-small{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
 .edit-top-right-vert{
     position: absolute;
     top: 5px;
@@ -1110,7 +1101,8 @@ select option[value=""] {
 .hover-scale{
     transition: 0.2s;
     &:hover{
-        transform: scale(1.01);
+        transform: scale(1.2);
+        cursor: pointer;
     }
 }
 
@@ -1488,7 +1480,7 @@ select option[value=""] {
 }
 
 .multi-slider-cont.mini{
-    height: 110px !important;
+    height: 100px !important;
 }
 
 .main-multi-slider{
@@ -1520,49 +1512,25 @@ select option[value=""] {
         font-size: 20px;
         z-index: 5;
         border-radius: 0px !important;
-        // background: rgba(255,255,255,.4);
+        background: rgba(255,255,255,.4);
     }
     .slider-left{
         left: 0px;
-        text-align: left;
         // background: rgb(255,255,255);
         // background: linear-gradient(90deg, rgba(255,255,255,.8), rgba(255,255,255,.25), rgba(255,255,255,0));
     }
     .slider-right{
         right: 0px;
-        text-align: right;
         // background: rgb(255,255,255);
         // background: linear-gradient(90deg, rgba(255,255,255,0), rgba(255,255,255,.25), rgba(255,255,255,.8));
     }
-}
-
-.arrow-black{
-    background-image: url('../../public/storage/images/arrows-black-icon.svg');
-    width: 15px;
-    height: 15px;
-    background-size: contain;
-    display:inline-block;
-}
-.arrow-green{
-    background-image: url('../../public/storage/images/arrows-green-icon.svg');
-    width: 15px;
-    height: 15px;
-    background-size: contain;
-    display:inline-block;
-}
-.arrow-blue{
-    background-image: url('../../public/storage/images/arrows-blue-icon.svg');
-    width: 15px;
-    height: 15px;
-    background-size: contain;
-    display:inline-block;
 }
 
 .card-style-mini{
     width: 220px;
     height: 100%;
     padding: 15px;
-    border-radius: 10px;
+    border-radius: 5px;
     position: relative;
     .text-cont{
         display: inline-block;
@@ -1640,7 +1608,7 @@ select option[value=""] {
         font-size: 80px;
         z-index: 5;
         img{
-            width: 65px;
+            width: 100px;
         }
     }
 }
