--- a/resources/sass/admin/accounts/index.scss
+++ b/resources/sass/admin/accounts/index.scss
@@ -5,7 +5,8 @@
         background-color: white;
         // background-image: url('../../../../public/storage/images/jumbotron.svg');
         background-size:  cover;
-        height: 870px;
+        height: 1050px;
+        background-position: center;
     }
     .end-background{
       margin-top: -100px;
@@ -19,16 +20,17 @@
 
     .search{
         width: 100%;
-        min-height: 600px;
+        min-height: 800px;
         padding: 15px;
-        .search-fixed{
+        .search-fixed-top{
           // width: 100%;
           // position: fixed;
+          transition: .5s;
+          padding-top: 0px;
         }
-        h1{
-            text-align: center;
-            padding: 10px;
-            color: white;
+        .search-fixed-center{
+            transition: .5s;
+            padding-top: 200px;
         }
         .search-type{
             text-align: center;
@@ -84,6 +86,46 @@
                         border-bottom-left-radius: 20px;
                         border-bottom-right-radius: 20px;
                     }
+                    &:only-child{
+                        border-radius: 20px;
+                    }
+                }
+                .s-filter-button{
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 20px;
+                    padding: 10px;
+                    font-size: 15px;
+                    font-weight: bold;
+                    color: black;
+                }
+                .s-filter{
+                    width: 100%;
+                    position: absolute;
+                    left: 0px;
+                    top: calc(100% + 5px);
+                    padding: 20px;
+                    background-color: white;
+                    border-radius: 20px;
+                    z-index: 3;
+                }
+                .search-bar{
+                    width: calc(100% - 40px);
+                    border-radius: 0px;
+                    border: none;
+                    //border-bottom: solid 1px gray;
+                    height: 30px;
+                    &:focus{
+                        outline: none;
+                    }
+                }
+                .submit-button{
+                    height: calc(100% - 8px);
+                    position: absolute;
+                    right: 4px;
+                    top: 50%;
+                    transform: translateY(-50%);
+                    border-radius: 20px;
                 }
                 .sub-filter-cont{
                     // background-color: rgba(200, 200, 200, .7);
@@ -452,6 +494,9 @@
         .search{
             .search-main{
                 .filter-cont{
+                    .s-filter{
+                        width: 300px;
+                    }
                     .row>div{
                         &:first-child{
                             border-top-left-radius: 20px;
@@ -464,6 +509,9 @@
                             border-top-right-radius: 20px;
                             border-bottom-left-radius: 0px;
                             border-bottom-right-radius: 20px;
+                        }
+                        &:only-child{
+                            border-radius: 20px;
                         }
                     }
                 }
