--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -127,11 +127,14 @@ ul>p{
     padding: 20px;
     border-radius: 10px;
     margin-bottom: 15px;
+    .edit-top-left{
+        z-index: 8;
+    }
 }
 
 .scale{
     &:hover{
-        transform: scale(1.01);
+        transform: scale(1.2);
     }
 }
 
@@ -424,8 +427,8 @@ select option[value=""]{
 .img-cont{
     display: inline-block;
     border-radius: 50%;
-    background-color: $green_2;
-    border: 2px solid $green_2;
+    // background-color: $green_2;
+    // border: 2px solid $green_2;
     position: relative;
     img{
         position: absolute;
@@ -448,6 +451,10 @@ select option[value=""]{
 .mini-img{
     width: 50px;
     height: 50px;
+}
+.small-img{
+    width: 65px;
+    height: 65px;
 }
 .medium-img{
     width: 100px;
@@ -833,8 +840,8 @@ select option[value=""]{
         display: inline-block;
         position: relative;
         top: 50%;
-        width: 220px;
-        height: 45px;
+        width: 100px;
+        height: 30px;
         //margin: -20px auto 0 auto;
         overflow: hidden;
     }
@@ -870,7 +877,8 @@ select option[value=""]{
     .layer
     {
         width: 100%;
-        background-color: $light_black;
+        background-color: white;
+        // border: 4px solid $green_2;
         transition: 0.3s ease all;
         z-index: 1;
     }
@@ -884,13 +892,13 @@ select option[value=""]{
         top: 0px;
         left: -1px;
         width: 50%;
-        height: 45px;
-        font-size: 20px;
+        height: 30px;
+        font-size: 15px;
         font-weight: bold;
         text-align: center;
         line-height: 1;
-        background-color: white;
-        color: $light_black;
+        background-color: $green_3;
+        color: white;
         border-radius: 20px;
         transition: 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15) all;
         display: flex;
@@ -914,9 +922,9 @@ select option[value=""]{
         &:before{
             position: absolute;
             width: 50%;
-            height: 45px;
-            color: white;
-            font-size: 20px;
+            height: 30px;
+            color: $green_2;
+            font-size: 15px;
             font-weight: bold;
             text-align: center;
             z-index: 5;
@@ -1542,7 +1550,7 @@ select option[value=""]{
 }
 
 .multi-slider-cont.mini{
-    height: 100px !important;
+    height: 120px !important;
 }
 
 .main-multi-slider{
@@ -1574,7 +1582,7 @@ select option[value=""]{
         font-size: 20px;
         z-index: 5;
         border-radius: 0px !important;
-        background: rgba(255,255,255,.4);
+        //background: rgba(255,255,255,.4);
     }
     .slider-left{
         left: 0px;
@@ -1697,6 +1705,12 @@ select option[value=""]{
 .r-180{
     transition: .2s;
     transform: rotate(180deg);
+}
+
+.arrow{
+    width: 20px;
+    height: 20px;
+    object-fit: contain;
 }
 
 @media (min-width: 992px){
