--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -29,6 +29,7 @@ $blue_1: #E5F5FC;
 // 009FE3
 
 $gray_1: #CDD8D6;
+$gray_2: #F3F5F9;
 
 $light_gray: #F3F5F9;
 
@@ -37,5 +38,5 @@ $default_green: #0AB89F;
 // $default_green_deactivate: rgba(19,155,72,0.7);
 $default_green_deactivate: rgba(10,184,159,0.7);
 $hover_gray: rgba(240,240,240,1);
-$light_black: rgb(50, 50, 50);
+$light_black: #224143;
 $gray-blue: #e7eaf3;
