--- a/resources/sass/admin/accounts/show.scss
+++ b/resources/sass/admin/accounts/show.scss
@@ -9,6 +9,7 @@
     .profile{
         background-color: $green_1;
         padding: 40px;
+        border-radius: 20px;
         .profile-image{
             a{
                 top:20px;
