--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17546,6 +17546,10 @@ ul > p {
   color: white !important;
 }
 
+.bg-gray {
+  background-color: #F3F5F9;
+}
+
 .tooltip {
   --microtip-transition-duration: 0.2s;
   --microtip-transition-delay: 0s;
@@ -17847,6 +17851,11 @@ select option[value=""] {
 .micro-img {
   width: 30px;
   height: 30px;
+}
+
+.tiny-img {
+  width: 40px;
+  height: 40px;
 }
 
 .mini-img {
@@ -18779,12 +18788,12 @@ select option[value=""] {
   font-size: 20px;
   cursor: pointer;
   color: #ccc;
-  border: 4px solid #0AB89F;
+  border: 2px solid #01B59C;
   border-radius: 20px;
 }
 
 .drop-zone--over {
-  background-color: rgba(10, 184, 159, 0.7);
+  background-color: #80DACD;
 }
 
 .drop-zone__input {
@@ -19071,13 +19080,46 @@ select option[value=""] {
      object-fit: contain;
 }
 
+@media (max-width: 576px) {
+  .container-nb {
+    width: 100%;
+    padding: 0px;
+  }
+}
+
+@media (min-width: 576px) {
+  .container-nb {
+    width: 100%;
+    padding: 0px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container-nb {
+    width: 100%;
+    padding: 0px;
+  }
+}
+
 @media (min-width: 992px) {
+  .container-nb {
+    width: 100%;
+    padding: 0px;
+  }
+
   .mobile-hide {
     display: inline-block !important;
   }
 
   .mobile-show {
     display: none !important;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container-nb {
+    width: calc(100% - 100px);
+    padding: 0 50px;
   }
 }
 
@@ -19090,8 +19132,14 @@ select option[value=""] {
   position: fixed;
   z-index: 10;
   width: 100%;
+}
+
+#nav-bar #container-nb {
   background-color: white;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.08);
+  border-radius: 30px;
+  margin: 0 auto;
+  height: 75px;
 }
 
 #nav-bar .nav-left,
@@ -19120,12 +19168,8 @@ select option[value=""] {
 
 #nav-bar .icon {
   transition: 0.2s;
-  border-radius: 50%;
-  background-color: gray;
-  color: white;
+  color: #224143;
   padding: 0;
-  width: 40px;
-  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19134,7 +19178,6 @@ select option[value=""] {
 }
 
 #nav-bar .icon:hover {
-  transform: scale(1.01);
   text-decoration: none;
 }
 
@@ -19174,22 +19217,9 @@ select option[value=""] {
   align-items: center;
 }
 
-#nav-bar .account-menu .user-image-cont {
-  display: inline-block;
-  position: relative;
-}
-
-#nav-bar .account-menu .user-image-cont .micro-item {
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-  padding: 0px;
-  margin: 0px;
-  line-height: 0;
-}
-
 #nav-bar .account-menu a {
   color: black;
+  padding-right: 5px;
 }
 
 #nav-bar .account-menu a .drop-menu {
@@ -19197,10 +19227,10 @@ select option[value=""] {
 }
 
 #nav-bar .account-menu .dropdown-menu {
-  min-width: auto !important;
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+  top: 20px !important;
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.08);
+  border: none;
 }
 
 #nav-bar .account-menu .dropdown-menu a {
@@ -19216,7 +19246,7 @@ select option[value=""] {
   top: 35px;
   background-color: white;
   border-radius: 20px;
-  background-color: #323232;
+  background-color: #224143;
   text-align: center;
   color: white;
 }
@@ -19248,27 +19278,27 @@ select option[value=""] {
 }
 
 .not-log-main-hg {
-  min-height: calc(100vh - 212px);
+  min-height: calc(100vh - 90px);
 }
 
 main {
-  min-height: calc(100vh - 267px);
+  min-height: calc(100vh - 200px);
   padding-bottom: 20px;
 }
 
 footer {
-  padding-top: 20px;
-  background-color: #323232;
-  color: #0AB89F;
+  padding-top: 35px;
+  background-color: #224143;
+  color: white;
+  border-top-left-radius: 90px;
+}
+
+footer .container {
+  padding: 0 50px;
 }
 
 footer .container > div > div {
-  padding-bottom: 20px;
-}
-
-footer .container > div > div h5 {
-  padding-bottom: 6px;
-  border-bottom: 2px solid #0AB89F;
+  padding-bottom: 10px;
 }
 
 footer .container .social a {
@@ -19277,39 +19307,26 @@ footer .container .social a {
 
 footer .container .social a i {
   font-size: 25px;
+  color: #01B59C;
 }
 
-footer .container .f-logo {
-  height: 100px;
-  text-align: center;
-  display: flex;
-  align-items: center;
-}
-
-footer .container .f-logo img {
-  height: 60px;
-  width: 60px;
-  margin-right: 10px;
-}
-
-footer .container .f-logo span {
-  font-size: 13px;
+footer .container .social a:hover i {
+  color: white;
 }
 
 footer .container a {
   color: white;
-  color: #0AB89F;
 }
 
 footer .container a:hover {
-  color: white;
+  color: #01B59C;
   text-decoration: none;
 }
 
 footer .bottom-footer {
-  border-top: 2px solid #0AB89F;
+  border-top: 1px solid white;
   text-align: center;
-  padding: 10px 0px;
+  padding: 6px 0px;
 }
 
 @media (min-width: 992px) {
@@ -19355,7 +19372,7 @@ footer .bottom-footer {
   color: white;
   padding-top: 75px;
   padding-bottom: 50px;
-  color: #323232;
+  color: #224143;
 }
 
 #guest-home .preview .intro h3 {
@@ -19550,12 +19567,12 @@ footer .bottom-footer {
 
 #search .search .search-type .search-type-switch {
   display: inline-block;
-  background-color: #323232;
+  background-color: #224143;
   border-radius: 20px;
 }
 
 #search .search .search-type .search-type-switch button {
-  background-color: #323232;
+  background-color: #224143;
   border-radius: 20px;
   color: white;
   border: none;
@@ -19566,7 +19583,7 @@ footer .bottom-footer {
 
 #search .search .search-type .search-type-switch .active {
   background-color: white;
-  color: #323232;
+  color: #224143;
 }
 
 #search .search .search-main {
@@ -20061,11 +20078,48 @@ footer .bottom-footer {
   }
 }
 
-#account-edit .form-sub-group {
+#user-edit .form-sub-group,
+#page-edit .form-sub-group {
   display: inline-block;
 }
 
-#account-edit .role a {
+#user-edit .left-area,
+#page-edit .left-area {
+  position: relative;
+  height: 400px;
+  padding-top: 80px;
+}
+
+#user-edit .left-area .fixed,
+#page-edit .left-area .fixed {
+  position: fixed;
+  width: 285px;
+}
+
+#user-edit .right-area,
+#page-edit .right-area {
+  border-radius: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#user-edit .right-area input,
+#user-edit .right-area textarea,
+#user-edit .right-area select,
+#page-edit .right-area input,
+#page-edit .right-area textarea,
+#page-edit .right-area select {
+  border: none;
+  border-radius: 20px;
+}
+
+#user-edit textarea,
+#page-edit textarea {
+  resize: none;
+}
+
+#user-edit .role a,
+#page-edit .role a {
   display: block;
   width: 100%;
   height: 100%;
@@ -20075,19 +20129,22 @@ footer .bottom-footer {
   border-radius: 5px;
 }
 
-#account-edit .role a:hover {
+#user-edit .role a:hover,
+#page-edit .role a:hover {
   background-color: #f0f0f0;
   cursor: pointer;
   text-decoration: none;
 }
 
-#account-edit .services select {
+#user-edit .services select,
+#page-edit .services select {
   display: inline-block;
   margin: 10px 0;
   margin-right: 10px;
 }
 
-#account-edit .services i:hover {
+#user-edit .services i:hover,
+#page-edit .services i:hover {
   cursor: pointer;
 }
 
@@ -20105,6 +20162,7 @@ footer .bottom-footer {
 #page-show .profile {
   background-color: #E5F7F5;
   padding: 40px;
+  border-radius: 20px;
 }
 
 #user-show .profile .profile-image a,
@@ -20464,15 +20522,9 @@ footer .bottom-footer {
   padding-left: 10px;
 }
 
-#notification-index {
-  height: calc(100vh - 215px);
-}
-
 #notification-index .not-cont {
-  height: calc(100% - 50px);
   padding: 10px;
   border-radius: 10px;
-  background-color: rgba(10, 184, 159, 0.7);
 }
 
 #notification-index .not-cont .not-item {
@@ -20480,7 +20532,7 @@ footer .bottom-footer {
   width: 100%;
   padding: 10px;
   border-radius: 10px;
-  background-color: gray;
+  background-color: #CDD8D6;
   color: black;
   margin-bottom: 4px;
   display: flex;
@@ -20489,7 +20541,8 @@ footer .bottom-footer {
 
 #notification-index .not-cont .not-item:hover {
   text-decoration: none;
-  background-color: #f0f0f0;
+  background-color: #224143;
+  color: white;
 }
 
 #notification-index .not-cont .not-item .mini-txt {
@@ -20497,11 +20550,11 @@ footer .bottom-footer {
 }
 
 #notification-index .not-cont .active {
-  background-color: rgba(10, 184, 159, 0.7);
+  background-color: #8AD1F1;
 }
 
 #notification-index .not-cont .active:hover {
-  background-color: #0AB89F;
+  background-color: #00A1DC;
 }
 
 #settings-index .delete-account {
@@ -20515,7 +20568,7 @@ footer .bottom-footer {
 }
 
 #chat-index {
-  height: calc(100vh - 287px);
+  height: calc(100vh - 215px);
 }
 
 #chat-index .chat-cont {
@@ -20578,7 +20631,7 @@ footer .bottom-footer {
 
 #chat-show,
 .chat-show {
-  height: calc(100vh - 315px);
+  height: calc(100vh - 215px);
 }
 
 #chat-show .messages-cont,
