--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -155,6 +155,9 @@ ul>p{
     background-color: $default_green;
     color: white !important;
 }
+.bg-gray{
+    background-color: $gray_2;
+}
 
 :root{
     // --microtip-transition-duration: 0.5s;
@@ -447,6 +450,10 @@ select option[value=""]{
 .micro-img{
     width: 30px;
     height: 30px;
+}
+.tiny-img{
+    width: 40px;
+    height: 40px;
 }
 .mini-img{
     width: 50px;
@@ -1420,13 +1427,13 @@ select option[value=""]{
     cursor: pointer;
     color: #ccc;
     //border: 4px dashed $default_green;
-    border: 4px solid $default_green;
+    border: 2px solid $green_3;
     border-radius: 20px;
 }
 
 .drop-zone--over{
     //border-style: solid;
-    background-color: $default_green_deactivate;
+    background-color: $green_2;
 }
 .drop-zone__input{
     display: none;
@@ -1713,11 +1720,43 @@ select option[value=""]{
     object-fit: contain;
 }
 
+@media (max-width: 576px){
+    .container-nb{
+          width: 100%;
+          padding: 0px;
+    }
+}
+
+@media (min-width: 576px){
+    .container-nb{
+          width: 100%;
+          padding: 0px;
+    }
+}
+
+@media (min-width: 768px){
+    .container-nb{
+          width: 100%;
+          padding: 0px;
+    }
+}
+
 @media (min-width: 992px){
+    .container-nb{
+          width: 100%;
+          padding: 0px;
+    }
     .mobile-hide{
         display: inline-block !important;
     }
     .mobile-show{
         display: none !important;
+    }
+}
+
+@media (min-width: 1200px){
+    .container-nb{
+        width: calc(100% - 100px);
+        padding: 0 50px;
     }
 }
