--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -31,6 +31,8 @@ $blue_1: #E5F5FC;
 $gray_1: #CDD8D6;
 
 $light_gray: #F3F5F9;
+$dark_1: #16292B;
+$dark_2: #223436;
 
 // $default_green: rgb(19,155,72);
 $default_green: #0AB89F;
