--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17546,6 +17546,36 @@ ul > p {
   color: white !important;
 }
 
+.bg-dark {
+  background-color: #16292B;
+  background-image: -webkit-linear-gradient(-60deg, #16292B 50%, #223436 50%);
+  color: #01B59C;
+}
+
+.custom-card {
+  border-radius: 20px;
+}
+
+.custom-card input {
+  border: none;
+  border-bottom: 2px solid #01B59C;
+  background-color: transparent;
+  color: white;
+  border-radius: 0px;
+}
+
+.custom-card input:focus {
+  outline: none;
+  background-color: transparent;
+  color: white;
+}
+
+.custom-card input:active {
+  outline: none;
+  background-color: transparent;
+  color: white;
+}
+
 .tooltip {
   --microtip-transition-duration: 0.2s;
   --microtip-transition-delay: 0s;
@@ -18146,7 +18176,7 @@ select option[value=""] {
   position: relative;
   top: 50%;
   width: 74px;
-  height: 36px;
+  height: 31px;
   overflow: hidden;
 }
 
@@ -18184,8 +18214,8 @@ select option[value=""] {
 .switch-button-container .switch-button .knobs:before {
   content: "";
   position: absolute;
-  top: 4px;
-  left: 4px;
+  top: 2px;
+  left: 2px;
   width: 27px;
   height: 27px;
   color: #fff;
@@ -18194,15 +18224,15 @@ select option[value=""] {
   text-align: center;
   line-height: 1;
   padding: 9px 4px;
-  background-color: #f44336;
+  background-color: #01B59C;
   border-radius: 50%;
   transition: 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15) all;
 }
 
 .switch-button-container .switch-button .checkbox:checked + .knobs:before {
   content: "";
-  left: 42px;
-  background-color: #03A9F4;
+  left: 45px;
+  background-color: #01B59C;
 }
 
 .switch-button-container .switch-button .checkbox:checked ~ .layer {
