--- a/resources/sass/admin/accounts/edit.scss
+++ b/resources/sass/admin/accounts/edit.scss
@@ -3,21 +3,31 @@
         display: inline-block;
     }
     .left-area{
-        position: relative;
-        height: 400px;
-        padding-top: 80px;
-        .fixed{
-            position: fixed;
-            width: 285px;
-        }
+        // position: relative;
+        // height: 400px;
+        // padding-top: 80px;
+        // .fixed{
+        //     position: fixed;
+        //     width: 285px;
+        // }
     }
     .right-area{
         border-radius: 20px;
-        padding-left: 40px;
-        padding-right: 40px;
+        padding: 30px;
+        .sub-section{
+            padding: 5px 0px;
+            border: none;
+            h6,label{
+              font-size: 12px;
+            }
+        }
         input,textarea,select{
             border: none;
-            border-radius: 20px;
+            border-radius: 15px;
+            font-size: 12px;
+        }
+        input{
+          height: 30px;
         }
     }
     textarea { resize: none; }
