--- a/resources/sass/admin/accounts/edit.scss
+++ b/resources/sass/admin/accounts/edit.scss
@@ -13,7 +13,7 @@
     }
     .right-area{
         border-radius: 20px;
-        padding: 30px;
+        padding: 30px 20px 30px;
         .sub-section{
             padding: 5px 0px;
             border: none;
