--- a/resources/sass/header-main-footer.scss
+++ b/resources/sass/header-main-footer.scss
@@ -1,6 +1,3 @@
-.nav-bar-space{
-    height: 75px;
-}
 #nav-bar{
     padding: 0;
     position: fixed;
@@ -44,23 +41,19 @@
         &:hover{
             text-decoration: none;
         }
-        i{
-            margin: 0 15px;
-            font-size: 20px;
-            span{
-                display: inline-block;
-                border-radius: 10px;
-                background-color: $default_green;
-                position: absolute;
-                top: 5px;
-                left: 90%;
-                transform: translate(-50%,-50%);
-                color: white;
-                font-size: 15px;
-                font-weight: bold;
-                font-family: Arial;
-                padding: 2px 5px;
-            }
+        span{
+            display: inline-block;
+            border-radius: 10px;
+            background-color: $green_2;
+            position: absolute;
+            top: 5px;
+            left: 90%;
+            transform: translate(-50%,-50%);
+            color: white;
+            font-size: 15px;
+            // font-weight: bold;
+            // font-family: Arial;
+            padding: 0px 5px;
         }
     }
     .beta{
@@ -140,11 +133,19 @@
     }
 }
 
-.not-log-main-hg{
-    min-height: calc(100vh - 90px);
-}
 main{
-    min-height: calc(100vh - 200px);
+    min-height: calc(100vh - 139px);
+    >div{
+        min-height: calc(100vh - 139px);
+        padding-top: 75px;
+        padding-bottom: 25px;
+    }
+}
+.no-footer-main{
+    min-height: 100vh;
+    >div{
+        min-height: 100vh;
+    }
 }
 
 footer{
